crates/burn-cube/tests/error/undeclared_variable.rs
use burn_cube::prelude::*;

#[cube]
fn kernel(x: UInt) {
    if x == y {
    }
}

fn main() {}
